--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -36,3 +36,7 @@ $govuk-assets-path: '/govuk/assets/';
 .moj-task-list .govuk-tag--grey {
     float: right;
 }
+
+.govuk-table__row--hidden {
+    display: none;
+}
