Add a timeline page for the release prototypes

--- a/app/views/release/layout.html
+++ b/app/views/release/layout.html
@@ -54,7 +54,7 @@
 
             <a class="moj-header__link moj-header__link--organisation-name" href="/">HMPPS</a>
 
-            <a class="moj-header__link moj-header__link--service-name" href="#">
+            <a class="moj-header__link moj-header__link--service-name" href="/release">
               Manage prison release
             </a>
         </div>
