--- a/app/views/release/case/collect-documents.html
+++ b/app/views/release/case/collect-documents.html
@@ -71,7 +71,7 @@
                 text: ""
               },
               {
-                html: "<a href='#document'>request</a>"
+                html: "<a href='/release/case/request-document?document=PAROM+1&name=Julie+Young,+Probation+Officer&email=julie.young@probation.gsi.gov.uk'>request</a>"
               }
             ],
             [
@@ -88,7 +88,7 @@
                 text: ""
               },
               {
-                html: "<a href='#document'>request</a>"
+                html: "<a href='/release/case/request-document?document=SPR+L&name=Mark+Willis,+Offender+Supervisor&email=mark.willis@probation.gsi.gov.uk'>request</a>"
               }
             ],
             [
