Change heading to be more explicit

--- a/app/views/release/case/collect-documents.html
+++ b/app/views/release/case/collect-documents.html
@@ -111,7 +111,7 @@
           ]
       }) }}
 
-      <h2 class="govuk-heading-l">Completed</h2>
+      <h2 class="govuk-heading-l">Mandatory documents completed</h2>
 
       {{ govukTable({
           firstCellIsHeader: false,
