--- a/app/views/release/case/collect-and-track-documents.html
+++ b/app/views/release/case/collect-and-track-documents.html
@@ -136,7 +136,7 @@
 
       {% endif %}
 
-      <h2 class="govuk-heading-l">Completed</h2>
+      <h2 class="govuk-heading-l">Mandatory documents completed</h2>
 
       {{ govukTable({
           firstCellIsHeader: false,
