Replace prison number with NOMIS number

--- a/app/views/release/case/check-documentation.html
+++ b/app/views/release/case/check-documentation.html
@@ -55,7 +55,7 @@ When possible, they’ve been automatically checked to ensure that:</p>
             },
             {
               key: {
-                text: "Prison number"
+                text: "NOMIS number"
               },
               value: {
                 text: "A721445"
