--- a/app/views/release/case/request-document.html
+++ b/app/views/release/case/request-document.html
@@ -43,7 +43,7 @@
 
         <p class="govuk-body">
           <strong>Prisoner name, surname, DOB:</strong> Matt Johnson, 20 September 1976<br>
-          <strong>Prison number:</strong> A721445<br>
+          <strong>NOMIS number:</strong> A721445<br>
           <strong>Missing document:</strong> {{ query.document }}<br>
         </p>
         <p class="govuk-body">You can upload files following this link.</p>
