--- a/app/views/release/todo.html
+++ b/app/views/release/todo.html
@@ -30,7 +30,7 @@
           firstCellIsHeader: false,
           head: [
             {
-              text: "Prison number"
+              text: "NOMIS number"
             },
             {
               text: "Status"
@@ -124,7 +124,7 @@
           firstCellIsHeader: false,
           head: [
             {
-              text: "Prison number"
+              text: "NOMIS number"
             },
             {
               text: "Status"
