--- a/app/views/release/case/refer-to-parole-board.html
+++ b/app/views/release/case/refer-to-parole-board.html
@@ -44,7 +44,7 @@
 
         <p class="govuk-body">
           <strong>Prisoner name, surname, DOB:</strong> Matt Johnson, 20 September 1976<br>
-          <strong>Prison number:</strong> A721445<br>
+          <strong>NOMIS number:</strong> A721445<br>
         </p>
         <p class="govuk-body">You can review the documentation following this link.</p>
 
