--- a/app/views/release/search.html
+++ b/app/views/release/search.html
@@ -45,7 +45,7 @@
           firstCellIsHeader: false,
           head: [
             {
-              text: "Prison number"
+              text: "NOMIS number"
             },
             {
               text: "Family name"
