--- a/app/views/release/case/_navigation.html
+++ b/app/views/release/case/_navigation.html
@@ -18,7 +18,8 @@
       href: '#4'
     }, {
       text: 'Timeline',
-      href: '#5'
+      href: '/release/case/timeline',
+      active: currentPage == 'timeline'
     }]
   }) 
 }}
