--- a/app/views/release/todo.html
+++ b/app/views/release/todo.html
@@ -25,7 +25,7 @@
         <h2 class="govuk-heading-m">
           <span class="govuk-!-font-size-48">3</span> cases awaiting referral
         </h2>
-        {% set viewButton = "<a href='/release/case/milestones'>View</a>" %}
+        {% set viewButton = "<a href='/release/case/timeline'>View</a>" %}
         {{ govukTable({
           firstCellIsHeader: false,
           head: [
