Only show button if not referred

--- a/app/views/release/case/refer-to-parole-board.html
+++ b/app/views/release/case/refer-to-parole-board.html
@@ -52,7 +52,7 @@
         Parole Elgible Casework Team, PPCS</p>
       </div>
 
-      <form action="/release/case/milestones">
+      <form action="/release/case/timeline?referred=true">
 
         <div class="govuk-!-margin-top-7">
           {{ govukButton({
