--- a/app/views/index.html
+++ b/app/views/index.html
@@ -14,7 +14,7 @@
         <span class="govuk-caption-xl">{{releaseVersion}}</span>
       </h1>{{releaseVersion | log }}
       <ul class="govuk-list govuk-list--bullet">
-        <li><a href="/release">Manage prison release</a></li>
+        <li><a href="/release">Manage a parole review</a></li>
       </ul>
     </div>
   </div>
