--- a/app/views/release/case/calculate-tariff-expiration-date.html
+++ b/app/views/release/case/calculate-tariff-expiration-date.html
@@ -9,7 +9,7 @@
 
 
 {% block pageTitle %}
-  Calculate tariff expiration date - Manage prison release
+  Calculate tariff expiration date - Manage a parole review
 {% endblock %}
 
 {% block identityBar %}
