--- a/app/views/release/case/collect-documents.html
+++ b/app/views/release/case/collect-documents.html
@@ -6,7 +6,7 @@
 
 
 {% block pageTitle %}
-  Matt Johnson - Manage prison release
+  Matt Johnson - Manage a parole review
 {% endblock %}
 
 {% block identityBar %}
