--- a/app/views/release/case/confirm-tariff-expiration-date.html
+++ b/app/views/release/case/confirm-tariff-expiration-date.html
@@ -7,7 +7,7 @@
 {%- from "govuk/components/summary-list/macro.njk" import govukSummaryList -%}
 
 {% block pageTitle %}
-  Calculate tariff expiration date - Manage prison release
+  Calculate tariff expiration date - Manage a parole review
 {% endblock %}
 
 {% block identityBar %}
