--- a/app/views/release/case/decide-how-to-progress.html
+++ b/app/views/release/case/decide-how-to-progress.html
@@ -8,7 +8,7 @@
 {%- from "moj/components/banner/macro.njk" import mojBanner -%}
 
 {% block pageTitle %}
-  Matt Johnson - Manage prison release
+  Matt Johnson - Manage a parole review
 {% endblock %}
 
 {% block identityBar %}
