--- a/app/views/release/case/overview.html
+++ b/app/views/release/case/overview.html
@@ -5,7 +5,7 @@
 {%- from "govuk/components/details/macro.njk" import govukDetails -%}
 
 {% block pageTitle %}
-  Matt Johnson - Manage prison release
+  Matt Johnson - Manage a parole review
 {% endblock %}
 
 {% block identityBar %}
