--- a/app/views/release/index.html
+++ b/app/views/release/index.html
@@ -11,7 +11,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-xl">
-        Manage prison release alpha
+        Manage a parole review alpha
       </h1>
 
       <h2 class="govuk-heading-m">
