--- a/app/views/release/layout.html
+++ b/app/views/release/layout.html
@@ -35,7 +35,7 @@
 {% endblock %}
 
 {% block pageTitle %}
-  Manage prison release
+  Manage a parole review
 {% endblock %}
 
 {% block header %}
@@ -55,7 +55,7 @@
             <a class="moj-header__link moj-header__link--organisation-name" href="/">HMPPS</a>
 
             <a class="moj-header__link moj-header__link--service-name" href="/release">
-              Manage prison release
+              Manage a parole review
             </a>
         </div>
         <div class="moj-header__content">
