--- a/app/views/release/search.html
+++ b/app/views/release/search.html
@@ -5,7 +5,7 @@
 {% set currentPage = 'search' %}
 
 {% block pageTitle %}
-  Manage prison release
+  Manage a parole review
 {% endblock %}
 
 {% block content %}
