--- a/app/views/release/case/check-documentation.html
+++ b/app/views/release/case/check-documentation.html
@@ -7,7 +7,7 @@
 {%- from "govuk/components/summary-list/macro.njk" import govukSummaryList -%}
 
 {% block pageTitle %}
-  Matt Johnson - Manage prison release
+  Matt Johnson - Manage a parole review
 {% endblock %}
 
 {% block identityBar %}
