--- a/app/views/release/case/collect-and-track-documents.html
+++ b/app/views/release/case/collect-and-track-documents.html
@@ -6,7 +6,7 @@
 {%- from "govuk/components/button/macro.njk" import govukButton -%}
 
 {% block pageTitle %}
-  Matt Johnson - Manage prison release
+  Matt Johnson - Manage a parole review
 {% endblock %}
 
 {% set referToMCA = true %}
