--- a/app/views/release/case/refer-to-parole-board.html
+++ b/app/views/release/case/refer-to-parole-board.html
@@ -7,7 +7,7 @@
 
 
 {% block pageTitle %}
-  Matt Johnson - Manage prison release
+  Matt Johnson - Manage a parole review
 {% endblock %}
 
 {% block identityBar %}
