--- a/app/views/release/case/rerequest-documents.html
+++ b/app/views/release/case/rerequest-documents.html
@@ -9,7 +9,7 @@
 {% from "govuk/components/input/macro.njk" import govukInput %}
 
 {% block pageTitle %}
-  Matt Johnson - Manage prison release
+  Matt Johnson - Manage a parole review
 {% endblock %}
 
 {% block identityBar %}
