--- a/app/views/release/todo.html
+++ b/app/views/release/todo.html
@@ -4,7 +4,7 @@
 {% set currentPage = 'todo' %}
 
 {% block pageTitle %}
-  To do - Manage prison release
+  To do - Manage a parole review
 {% endblock %}
 
 {% block content %}
