small content changes around validation
validation content changes

--- a/app/views/release/case/check-documentation.html
+++ b/app/views/release/case/check-documentation.html
@@ -29,10 +29,10 @@
         <p class="govuk-body">Check and confirm if the following documents are correct.
 When possible, they’ve been automatically checked to ensure that:</p>
         <ul class="govuk-list govuk-list--bullet">
-            <li>it is the right format</li>
-            <li>the offender’s name matches the sentence</li>
-            <li>it’s been authored</li>
-            <li>it’s been produced within the last 6 months</li>
+            <li>they have the name and surname of the author</li>
+            <li>whether they have been produced in the last 6 months</li>
+            <li>whether they are the document that they should be</li>
+            <li>whether the document belongs to this offender’s case</li>
         </ul>
 
         {{ govukSummaryList({
