--- a/app/views/release/case/collect-documents.html
+++ b/app/views/release/case/collect-documents.html
@@ -29,10 +29,10 @@
         Request and track/verify all the documentation for the full dossier. When possible, they’ve been automatically checked to ensure that:
       </p>
       <ul class="govuk-list govuk-list--bullet">
-        <li>it is the right format</li>
-        <li>the offender’s name matches the sentence</li>
-        <li>it’s been authored</li>
-        <li>it’s been produced within the last 6 months</li>
+        <li>they have the name and surname of the author</li>
+        <li>whether they have been produced in the last 6 months</li>
+        <li>whether they are the document that they should be</li>
+        <li>whether the document belongs to this offender’s case</li>
       </ul>
 
       <h2 class="govuk-heading-l">Missing information</h2>
@@ -62,7 +62,7 @@
                 html: "PAROM 1"
               },
               {
-                text: "24 August 2020" if data.parom1 else "" 
+                text: "24 August 2020" if data.parom1 else ""
               },
               {
                 text: "HMPPS - Julie Young, Probation Officer"
