small content change to the refer to parole board screen

--- a/app/views/release/case/refer-to-parole-board.html
+++ b/app/views/release/case/refer-to-parole-board.html
@@ -30,17 +30,17 @@
       <p class="govuk-body">
         Below is the notification you're about to send to:
       </p>
-      
+
       <div class="grey-panel govuk-body govuk-!-padding-5">
         <div class="pull-right"><a href="#edit" class="govuk-link">Edit</a></div>
-        Tom Sus, Member Case Assessment<br>
-        tom.sus@mca.gov.uk
+        Tom Sus, Member Case Assessment Team<br>
+        tom.sus@paroleboard.gov.uk
       </div>
 
       <div class="email-preview govuk-!-padding-5">
         <p class="govuk-body">Dear colleague,</p>
 
-        <p class="govuk-body">The documentation is now ready for review.</p>
+        <p class="govuk-body">This parole dossier is now ready for review.</p>
 
         <p class="govuk-body">
           <strong>Prisoner name, surname, DOB:</strong> Matt Johnson, 20 September 1976<br>
